Testes de unidade e integração no contexto do domínio de arquivo